Dragit/Dragit/pismart_/pismart/SpeakPython/SpeakPythonJSGFParser.py
# $ANTLR 3.4 SpeakPythonJSGF.g 2015-09-25 20:19:04

import sys
from antlr3 import *
from antlr3.compat import set, frozenset



# for convenience in actions
HIDDEN = BaseRecognizer.HIDDEN

# token types
EOF=-1
ARROW=4
AT=5
AT_GLOBAL_OPTIONS=6
AT_OPTIONS=7
AT_RESULTS=8
AT_TESTS=9
B_ARROW=10
COMMA=11
COMMENT=12
END_DQUOTE_STRING=13
END_SQUOTE_STRING=14
EQ=15
HASH_NAME=16
INSIDE_DQUOTE_STRING=17
INSIDE_SQUOTE_STRING=18
KLEENE=19
LA_BR=20
LC_BR=21
LR_BR=22
LS_BR=23
NEWLINE=24
NUM=25
OR=26
PLUS=27
QSTN=28
QUOTE_STRING=29
RA_BR=30
RC_BR=31
REGEX=32
REGEX_LABEL=33
RR_BR=34
RS_BR=35
SEMI=36
STAR=37
START_DQUOTE_STRING=38
START_SQUOTE_STRING=39
TILDE=40
UNDERSCORE_NUM=41
VAR_NAME=42
WHITE_SPACE=43
WORD=44

# token names
tokenNames = [
    "<invalid>", "<EOR>", "<DOWN>", "<UP>",
    "ARROW", "AT", "AT_GLOBAL_OPTIONS", "AT_OPTIONS", "AT_RESULTS", "AT_TESTS", 
    "B_ARROW", "COMMA", "COMMENT", "END_DQUOTE_STRING", "END_SQUOTE_STRING", 
    "EQ", "HASH_NAME", "INSIDE_DQUOTE_STRING", "INSIDE_SQUOTE_STRING", "KLEENE", 
    "LA_BR", "LC_BR", "LR_BR", "LS_BR", "NEWLINE", "NUM", "OR", "PLUS", 
    "QSTN", "QUOTE_STRING", "RA_BR", "RC_BR", "REGEX", "REGEX_LABEL", "RR_BR", 
    "RS_BR", "SEMI", "STAR", "START_DQUOTE_STRING", "START_SQUOTE_STRING", 
    "TILDE", "UNDERSCORE_NUM", "VAR_NAME", "WHITE_SPACE", "WORD"
]




class SpeakPythonJSGFParser(Parser):
    grammarFileName = "SpeakPythonJSGF.g"
    api_version = 1
    tokenNames = tokenNames

    def __init__(self, input, state=None, *args, **kwargs):
        if state is None:
            state = RecognizerSharedState()

        super(SpeakPythonJSGFParser, self).__init__(input, state, *args, **kwargs)




        self.delegates = []





    optionVals = {};
    optionValsBackup = optionVals;

    rules = [];
    aliasRules = {};

    parseFailed = False;
    messages = {'regex': "We're sorry, regex is not supported in JSGF at this time",
    		'variable': "We're sorry, variables are not supported in JSGF at this time"};



    # $ANTLR start "prog"
    # SpeakPythonJSGF.g:47:1: prog : s EOF ;
    def prog(self, ):

        self.optionVals['wordRegex'] = '[a-zA-Z0-9_\\+\\.\\-]+';
        self.optionVals['varRegex'] = '[a-zA-Z0-9_\\+\\.\\-]+';
        self.optionVals['wordDelim'] = '[ ,/]+';

        try:
            try:
                # SpeakPythonJSGF.g:54:2: ( s EOF )
                # SpeakPythonJSGF.g:54:4: s EOF
                pass 
                self._state.following.append(self.FOLLOW_s_in_prog51)
                self.s()

                self._state.following.pop()

                self.match(self.input, EOF, self.FOLLOW_EOF_in_prog53)

                if self._state.backtracking == 0:
                    pass






            except RecognitionException, re:
                self.reportError(re)
                self.recover(self.input, re)

        finally:
            pass
        return 

    # $ANTLR end "prog"



    # $ANTLR start "s"
    # SpeakPythonJSGF.g:57:1: s : ( alias s | mat s | globalOptions s |);
    def s(self, ):
        mat1 = None




        try:
            try:
                # SpeakPythonJSGF.g:61:2: ( alias s | mat s | globalOptions s |)
                alt1 = 4
                LA1 = self.input.LA(1)
                if LA1 == HASH_NAME:
                    LA1_1 = self.input.LA(2)

                    if (LA1_1 == LR_BR) :
                        LA1_5 = self.input.LA(3)

                        if (LA1_5 == RR_BR) :
                            alt1 = 1
                        elif (LA1_5 == HASH_NAME or (LR_BR <= LA1_5 <= LS_BR) or LA1_5 == REGEX or LA1_5 == VAR_NAME or LA1_5 == WORD) :
                            alt1 = 2
                        else:
                            if self._state.backtracking > 0:
                                raise BacktrackingFailed


                            nvae = NoViableAltException("", 1, 5, self.input)

                            raise nvae


                    elif (LA1_1 == HASH_NAME or LA1_1 == LS_BR or LA1_1 == OR or LA1_1 == REGEX or LA1_1 == SEMI or LA1_1 == VAR_NAME or LA1_1 == WORD) :
                        alt1 = 2
                    else:
                        if self._state.backtracking > 0:
                            raise BacktrackingFailed


                        nvae = NoViableAltException("", 1, 1, self.input)

                        raise nvae


                elif LA1 == AT_OPTIONS or LA1 == LR_BR or LA1 == LS_BR or LA1 == REGEX or LA1 == VAR_NAME or LA1 == WORD:
                    alt1 = 2
                elif LA1 == AT_GLOBAL_OPTIONS:
                    alt1 = 3
                elif LA1 == EOF:
                    alt1 = 4
                else:
                    if self._state.backtracking > 0:
                        raise BacktrackingFailed


                    nvae = NoViableAltException("", 1, 0, self.input)

                    raise nvae


                if alt1 == 1:
                    # SpeakPythonJSGF.g:61:4: alias s
                    pass 
                    self._state.following.append(self.FOLLOW_alias_in_s71)
                    self.alias()

                    self._state.following.pop()

                    if self._state.backtracking == 0:
                        pass



                    self._state.following.append(self.FOLLOW_s_in_s75)
                    self.s()

                    self._state.following.pop()


                elif alt1 == 2:
                    # SpeakPythonJSGF.g:62:4: mat s
                    pass 
                    self._state.following.append(self.FOLLOW_mat_in_s81)
                    mat1 = self.mat()

                    self._state.following.pop()

                    if self._state.backtracking == 0:
                        pass
                        self.rules.append(mat1); 



                    self._state.following.append(self.FOLLOW_s_in_s85)
                    self.s()

                    self._state.following.pop()


                elif alt1 == 3:
                    # SpeakPythonJSGF.g:63:4: globalOptions s
                    pass 
                    self._state.following.append(self.FOLLOW_globalOptions_in_s91)
                    self.globalOptions()

                    self._state.following.pop()

                    self._state.following.append(self.FOLLOW_s_in_s93)
                    self.s()

                    self._state.following.pop()


                elif alt1 == 4:
                    # SpeakPythonJSGF.g:64:4: 
                    pass 
                    if self._state.backtracking == 0:
                        pass





            except RecognitionException, re:
                self.reportError(re)
                self.recover(self.input, re)

        finally:
            pass
        return 

    # $ANTLR end "s"



    # $ANTLR start "globalOptions"
    # SpeakPythonJSGF.g:67:1: globalOptions : AT_GLOBAL_OPTIONS myOptions AT ;
    def globalOptions(self, ):
        try:
            try:
                # SpeakPythonJSGF.g:68:2: ( AT_GLOBAL_OPTIONS myOptions AT )
                # SpeakPythonJSGF.g:68:4: AT_GLOBAL_OPTIONS myOptions AT
                pass 
                self.match(self.input, AT_GLOBAL_OPTIONS, self.FOLLOW_AT_GLOBAL_OPTIONS_in_globalOptions109)

                self._state.following.append(self.FOLLOW_myOptions_in_globalOptions111)
                self.myOptions()

                self._state.following.pop()

                self.match(self.input, AT, self.FOLLOW_AT_in_globalOptions113)




            except RecognitionException, re:
                self.reportError(re)
                self.recover(self.input, re)

        finally:
            pass
        return 

    # $ANTLR end "globalOptions"



    # $ANTLR start "localOptions"
    # SpeakPythonJSGF.g:71:1: localOptions : AT_OPTIONS myOptions AT ;
    def localOptions(self, ):
        try:
            try:
                # SpeakPythonJSGF.g:72:2: ( AT_OPTIONS myOptions AT )
                # SpeakPythonJSGF.g:72:4: AT_OPTIONS myOptions AT
                pass 
                self.match(self.input, AT_OPTIONS, self.FOLLOW_AT_OPTIONS_in_localOptions124)

                if self._state.backtracking == 0:
                    pass
                    self.optionValsBackup = self.optionVals; self.optionVals = self.optionValsBackup.copy(); 



                self._state.following.append(self.FOLLOW_myOptions_in_localOptions128)
                self.myOptions()

                self._state.following.pop()

                self.match(self.input, AT, self.FOLLOW_AT_in_localOptions130)




            except RecognitionException, re:
                self.reportError(re)
                self.recover(self.input, re)

        finally:
            pass
        return 

    # $ANTLR end "localOptions"



    # $ANTLR start "myOptions"
    # SpeakPythonJSGF.g:75:1: myOptions : ( myOption myOptions |);
    def myOptions(self, ):
        try:
            try:
                # SpeakPythonJSGF.g:76:2: ( myOption myOptions |)
                alt2 = 2
                LA2_0 = self.input.LA(1)

                if (LA2_0 == WORD) :
                    alt2 = 1
                elif (LA2_0 == EOF or LA2_0 == AT) :
                    alt2 = 2
                else:
                    if self._state.backtracking > 0:
                        raise BacktrackingFailed


                    nvae = NoViableAltException("", 2, 0, self.input)

                    raise nvae


                if alt2 == 1:
                    # SpeakPythonJSGF.g:76:4: myOption myOptions
                    pass 
                    self._state.following.append(self.FOLLOW_myOption_in_myOptions141)
                    self.myOption()

                    self._state.following.pop()

                    self._state.following.append(self.FOLLOW_myOptions_in_myOptions143)
                    self.myOptions()

                    self._state.following.pop()


                elif alt2 == 2:
                    # SpeakPythonJSGF.g:77:4: 
                    pass 
                    if self._state.backtracking == 0:
                        pass





            except RecognitionException, re:
                self.reportError(re)
                self.recover(self.input, re)

        finally:
            pass
        return 

    # $ANTLR end "myOptions"



    # $ANTLR start "myOption"
    # SpeakPythonJSGF.g:80:1: myOption : WORD EQ ( RA_BR )? REGEX ( SEMI )? ;
    def myOption(self, ):
        WORD2 = None
        REGEX3 = None

        try:
            try:
                # SpeakPythonJSGF.g:81:2: ( WORD EQ ( RA_BR )? REGEX ( SEMI )? )
                # SpeakPythonJSGF.g:81:4: WORD EQ ( RA_BR )? REGEX ( SEMI )?
                pass 
                WORD2 = self.match(self.input, WORD, self.FOLLOW_WORD_in_myOption159)

                self.match(self.input, EQ, self.FOLLOW_EQ_in_myOption161)

                # SpeakPythonJSGF.g:81:12: ( RA_BR )?
                alt3 = 2
                LA3_0 = self.input.LA(1)

                if (LA3_0 == RA_BR) :
                    alt3 = 1
                if alt3 == 1:
                    # SpeakPythonJSGF.g:81:13: RA_BR
                    pass 
                    self.match(self.input, RA_BR, self.FOLLOW_RA_BR_in_myOption164)




                REGEX3 = self.match(self.input, REGEX, self.FOLLOW_REGEX_in_myOption168)

                # SpeakPythonJSGF.g:81:27: ( SEMI )?
                alt4 = 2
                LA4_0 = self.input.LA(1)

                if (LA4_0 == SEMI) :
                    alt4 = 1
                if alt4 == 1:
                    # SpeakPythonJSGF.g:81:28: SEMI
                    pass 
                    self.match(self.input, SEMI, self.FOLLOW_SEMI_in_myOption171)




                if self._state.backtracking == 0:
                    pass
                    self.optionVals[WORD2.text] = REGEX3.text[1:-2]; 






            except RecognitionException, re:
                self.reportError(re)
                self.recover(self.input, re)

        finally:
            pass
        return 

    # $ANTLR end "myOption"



    # $ANTLR start "mat"
    # SpeakPythonJSGF.g:85:1: mat returns [matR] : ( localOptions )? exps statementFields ;
    def mat(self, ):
        matR = None


        exps4 = None




        try:
            try:
                # SpeakPythonJSGF.g:89:2: ( ( localOptions )? exps statementFields )
                # SpeakPythonJSGF.g:89:4: ( localOptions )? exps statementFields
                pass 
                # SpeakPythonJSGF.g:89:4: ( localOptions )?
                alt5 = 2
                LA5_0 = self.input.LA(1)

                if (LA5_0 == AT_OPTIONS) :
                    alt5 = 1
                if alt5 == 1:
                    # SpeakPythonJSGF.g:89:5: localOptions
                    pass 
                    self._state.following.append(self.FOLLOW_localOptions_in_mat198)
                    self.localOptions()

                    self._state.following.pop()




                self._state.following.append(self.FOLLOW_exps_in_mat202)
                exps4 = self.exps()

                self._state.following.pop()

                if self._state.backtracking == 0:
                    pass
                    self.optionVals = self.optionValsBackup; 



                self._state.following.append(self.FOLLOW_statementFields_in_mat211)
                self.statementFields()

                self._state.following.pop()

                if self._state.backtracking == 0:
                    pass
                    matR =  exps4 






            except RecognitionException, re:
                self.reportError(re)
                self.recover(self.input, re)

        finally:
            pass
        return matR

    # $ANTLR end "mat"



    # $ANTLR start "statementFields"
    # SpeakPythonJSGF.g:95:1: statementFields : ( AT_RESULTS mResults AT statementFields | AT_TESTS testCases AT statementFields |);
    def statementFields(self, ):
        try:
            try:
                # SpeakPythonJSGF.g:96:2: ( AT_RESULTS mResults AT statementFields | AT_TESTS testCases AT statementFields |)
                alt6 = 3
                LA6 = self.input.LA(1)
                if LA6 == AT_RESULTS:
                    alt6 = 1
                elif LA6 == AT_TESTS:
                    alt6 = 2
                elif LA6 == EOF or LA6 == AT_GLOBAL_OPTIONS or LA6 == AT_OPTIONS or LA6 == HASH_NAME or LA6 == LR_BR or LA6 == LS_BR or LA6 == REGEX or LA6 == VAR_NAME or LA6 == WORD:
                    alt6 = 3
                else:
                    if self._state.backtracking > 0:
                        raise BacktrackingFailed


                    nvae = NoViableAltException("", 6, 0, self.input)

                    raise nvae


                if alt6 == 1:
                    # SpeakPythonJSGF.g:96:4: AT_RESULTS mResults AT statementFields
                    pass 
                    self.match(self.input, AT_RESULTS, self.FOLLOW_AT_RESULTS_in_statementFields227)

                    self._state.following.append(self.FOLLOW_mResults_in_statementFields229)
                    self.mResults()

                    self._state.following.pop()

                    self.match(self.input, AT, self.FOLLOW_AT_in_statementFields231)

                    self._state.following.append(self.FOLLOW_statementFields_in_statementFields233)
                    self.statementFields()

                    self._state.following.pop()

                    if self._state.backtracking == 0:
                        pass




                elif alt6 == 2:
                    # SpeakPythonJSGF.g:98:4: AT_TESTS testCases AT statementFields
                    pass 
                    self.match(self.input, AT_TESTS, self.FOLLOW_AT_TESTS_in_statementFields242)

                    self._state.following.append(self.FOLLOW_testCases_in_statementFields244)
                    self.testCases()

                    self._state.following.pop()

                    self.match(self.input, AT, self.FOLLOW_AT_in_statementFields246)

                    self._state.following.append(self.FOLLOW_statementFields_in_statementFields248)
                    self.statementFields()

                    self._state.following.pop()

                    if self._state.backtracking == 0:
                        pass




                elif alt6 == 3:
                    # SpeakPythonJSGF.g:100:4: 
                    pass 
                    if self._state.backtracking == 0:
                        pass





            except RecognitionException, re:
                self.reportError(re)
                self.recover(self.input, re)

        finally:
            pass
        return 

    # $ANTLR end "statementFields"



    # $ANTLR start "alias"
    # SpeakPythonJSGF.g:103:1: alias returns [aliasR] : HASH_NAME LR_BR RR_BR EQ exps statementFields ;
    def alias(self, ):
        aliasR = None


        HASH_NAME5 = None
        exps6 = None


        try:
            try:
                # SpeakPythonJSGF.g:104:2: ( HASH_NAME LR_BR RR_BR EQ exps statementFields )
                # SpeakPythonJSGF.g:104:4: HASH_NAME LR_BR RR_BR EQ exps statementFields
                pass 
                HASH_NAME5 = self.match(self.input, HASH_NAME, self.FOLLOW_HASH_NAME_in_alias272)

                self.match(self.input, LR_BR, self.FOLLOW_LR_BR_in_alias274)

                self.match(self.input, RR_BR, self.FOLLOW_RR_BR_in_alias276)

                self.match(self.input, EQ, self.FOLLOW_EQ_in_alias278)

                self._state.following.append(self.FOLLOW_exps_in_alias280)
                exps6 = self.exps()

                self._state.following.pop()

                self._state.following.append(self.FOLLOW_statementFields_in_alias282)
                self.statementFields()

                self._state.following.pop()

                if self._state.backtracking == 0:
                    pass
                    self.aliasRules[HASH_NAME5.text[1:]] = exps6; 






            except RecognitionException, re:
                self.reportError(re)
                self.recover(self.input, re)

        finally:
            pass
        return aliasR

    # $ANTLR end "alias"



    # $ANTLR start "exps"
    # SpeakPythonJSGF.g:108:1: exps returns [expsR=''] : expVal SEMI ;
    def exps(self, ):
        expsR = ''


        expVal7 = None


        try:
            try:
                # SpeakPythonJSGF.g:109:2: ( expVal SEMI )
                # SpeakPythonJSGF.g:109:4: expVal SEMI
                pass 
                self._state.following.append(self.FOLLOW_expVal_in_exps301)
                expVal7 = self.expVal()

                self._state.following.pop()

                self.match(self.input, SEMI, self.FOLLOW_SEMI_in_exps303)

                if self._state.backtracking == 0:
                    pass
                    expsR =  expVal7 + ""; 






            except RecognitionException, re:
                self.reportError(re)
                self.recover(self.input, re)

        finally:
            pass
        return expsR

    # $ANTLR end "exps"



    # $ANTLR start "expVal"
    # SpeakPythonJSGF.g:113:1: expVal returns [expValR=''] : ( LS_BR e1= expVal RS_BR opt subExp | LR_BR e2= expVal RR_BR opt subExp |w1= WORD subExp | VAR_NAME subExp | HASH_NAME subExp | REGEX subExp );
    def expVal(self, ):
        expValR = ''


        w1 = None
        HASH_NAME14 = None
        e1 = None

        e2 = None

        opt8 = None

        subExp9 = None

        opt10 = None

        subExp11 = None

        subExp12 = None

        subExp13 = None

        subExp15 = None

        subExp16 = None


        try:
            try:
                # SpeakPythonJSGF.g:114:2: ( LS_BR e1= expVal RS_BR opt subExp | LR_BR e2= expVal RR_BR opt subExp |w1= WORD subExp | VAR_NAME subExp | HASH_NAME subExp | REGEX subExp )
                alt7 = 6
                LA7 = self.input.LA(1)
                if LA7 == LS_BR:
                    alt7 = 1
                elif LA7 == LR_BR:
                    alt7 = 2
                elif LA7 == WORD:
                    alt7 = 3
                elif LA7 == VAR_NAME:
                    alt7 = 4
                elif LA7 == HASH_NAME:
                    alt7 = 5
                elif LA7 == REGEX:
                    alt7 = 6
                else:
                    if self._state.backtracking > 0:
                        raise BacktrackingFailed


                    nvae = NoViableAltException("", 7, 0, self.input)

                    raise nvae


                if alt7 == 1:
                    # SpeakPythonJSGF.g:114:4: LS_BR e1= expVal RS_BR opt subExp
                    pass 
                    self.match(self.input, LS_BR, self.FOLLOW_LS_BR_in_expVal321)

                    self._state.following.append(self.FOLLOW_expVal_in_expVal325)
                    e1 = self.expVal()

                    self._state.following.pop()

                    self.match(self.input, RS_BR, self.FOLLOW_RS_BR_in_expVal327)

                    self._state.following.append(self.FOLLOW_opt_in_expVal329)
                    opt8 = self.opt()

                    self._state.following.pop()

                    self._state.following.append(self.FOLLOW_subExp_in_expVal331)
                    subExp9 = self.subExp()

                    self._state.following.pop()

                    if self._state.backtracking == 0:
                        pass
                        expValR =  opt8[0] + e1 + opt8[1] + subExp9 




                elif alt7 == 2:
                    # SpeakPythonJSGF.g:117:4: LR_BR e2= expVal RR_BR opt subExp
                    pass 
                    self.match(self.input, LR_BR, self.FOLLOW_LR_BR_in_expVal342)

                    self._state.following.append(self.FOLLOW_expVal_in_expVal346)
                    e2 = self.expVal()

                    self._state.following.pop()

                    self.match(self.input, RR_BR, self.FOLLOW_RR_BR_in_expVal348)

                    self._state.following.append(self.FOLLOW_opt_in_expVal350)
                    opt10 = self.opt()

                    self._state.following.pop()

                    self._state.following.append(self.FOLLOW_subExp_in_expVal352)
                    subExp11 = self.subExp()

                    self._state.following.pop()

                    if self._state.backtracking == 0:
                        pass
                        expValR =  opt10[0] + e2 + opt10[1] + subExp11 




                elif alt7 == 3:
                    # SpeakPythonJSGF.g:120:4: w1= WORD subExp
                    pass 
                    w1 = self.match(self.input, WORD, self.FOLLOW_WORD_in_expVal365)

                    self._state.following.append(self.FOLLOW_subExp_in_expVal367)
                    subExp12 = self.subExp()

                    self._state.following.pop()

                    if self._state.backtracking == 0:
                        pass
                        expValR =  w1.text + subExp12 




                elif alt7 == 4:
                    # SpeakPythonJSGF.g:123:4: VAR_NAME subExp
                    pass 
                    self.match(self.input, VAR_NAME, self.FOLLOW_VAR_NAME_in_expVal378)

                    self._state.following.append(self.FOLLOW_subExp_in_expVal380)
                    subExp13 = self.subExp()

                    self._state.following.pop()

                    if self._state.backtracking == 0:
                        pass
                        if (self.messages['variable'] != None): print self.messages['variable']; self.messages['variable'] = None; self.parseFailed = True; expValR =  subExp13 




                elif alt7 == 5:
                    # SpeakPythonJSGF.g:126:4: HASH_NAME subExp
                    pass 
                    HASH_NAME14 = self.match(self.input, HASH_NAME, self.FOLLOW_HASH_NAME_in_expVal391)

                    self._state.following.append(self.FOLLOW_subExp_in_expVal393)
                    subExp15 = self.subExp()

                    self._state.following.pop()

                    if self._state.backtracking == 0:
                        pass
                        name = HASH_NAME14.text[1:]; 



                    if self._state.backtracking == 0:
                        pass
                        if (name not in self.aliasRules): print "The rule <" + name + "> does not exist before it is referenced."; 



                    if self._state.backtracking == 0:
                        pass
                        expValR =  "<" + name + ">" + subExp15 




                elif alt7 == 6:
                    # SpeakPythonJSGF.g:131:4: REGEX subExp
                    pass 
                    self.match(self.input, REGEX, self.FOLLOW_REGEX_in_expVal414)

                    self._state.following.append(self.FOLLOW_subExp_in_expVal416)
                    subExp16 = self.subExp()

                    self._state.following.pop()

                    if self._state.backtracking == 0:
                        pass
                        if (self.messages['regex'] != None): print self.messages['regex']; self.messages['regex'] = None; self.parseFailed = True; expValR =  subExp16 





            except RecognitionException, re:
                self.reportError(re)
                self.recover(self.input, re)

        finally:
            pass
        return expValR

    # $ANTLR end "expVal"



    # $ANTLR start "subExp"
    # SpeakPythonJSGF.g:136:1: subExp returns [subExpR=''] : ( expVal | OR expVal |);
    def subExp(self, ):
        subExpR = ''


        expVal17 = None

        expVal18 = None


        try:
            try:
                # SpeakPythonJSGF.g:137:2: ( expVal | OR expVal |)
                alt8 = 3
                LA8 = self.input.LA(1)
                if LA8 == HASH_NAME or LA8 == LR_BR or LA8 == LS_BR or LA8 == REGEX or LA8 == VAR_NAME or LA8 == WORD:
                    alt8 = 1
                elif LA8 == OR:
                    alt8 = 2
                elif LA8 == EOF or LA8 == RR_BR or LA8 == RS_BR or LA8 == SEMI:
                    alt8 = 3
                else:
                    if self._state.backtracking > 0:
                        raise BacktrackingFailed


                    nvae = NoViableAltException("", 8, 0, self.input)

                    raise nvae


                if alt8 == 1:
                    # SpeakPythonJSGF.g:137:4: expVal
                    pass 
                    self._state.following.append(self.FOLLOW_expVal_in_subExp437)
                    expVal17 = self.expVal()

                    self._state.following.pop()

                    if self._state.backtracking == 0:
                        pass
                        subExpR =  " " + expVal17 




                elif alt8 == 2:
                    # SpeakPythonJSGF.g:139:4: OR expVal
                    pass 
                    self.match(self.input, OR, self.FOLLOW_OR_in_subExp447)

                    self._state.following.append(self.FOLLOW_expVal_in_subExp449)
                    expVal18 = self.expVal()

                    self._state.following.pop()

                    if self._state.backtracking == 0:
                        pass
                        subExpR =  " | " + expVal18 




                elif alt8 == 3:
                    # SpeakPythonJSGF.g:140:4: 
                    pass 
                    if self._state.backtracking == 0:
                        pass





            except RecognitionException, re:
                self.reportError(re)
                self.recover(self.input, re)

        finally:
            pass
        return subExpR

    # $ANTLR end "subExp"



    # $ANTLR start "opt"
    # SpeakPythonJSGF.g:144:1: opt returns [optR=('(',')')] : ( QSTN | STAR | PLUS |);
    def opt(self, ):
        optR = ('(',')')

